syntax = "proto3";
package mantrachain.marketmaker.v1beta1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "mantrachain/marketmaker/v1beta1/marketmaker.proto";

option go_package = "github.com/MANTRA-Finance/mantrachain/x/marketmaker/types";

// Params defines the parameters for the module.
message Params {
  option (amino.name) = "mantrachain/x/marketmaker/Params";
  option (gogoproto.equal) = false;

  // Address containing the funds used to distribute incentives
  string incentive_budget_address = 1;

  // The amount of deposit to be applied to the market maker, which is calculated per pair and is refunded when the
  // market maker included or rejected through the MarketMaker Proposal
  repeated cosmos.base.v1beta1.Coin deposit_amount = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable)     = false
  ];

  // Common variables used in market maker scoring system
  Common common = 3 [(gogoproto.nullable) = false];

  // Include the pairs that are incentive target pairs and the variables used in market maker scoring system
  repeated IncentivePair incentive_pairs = 4
      [(gogoproto.nullable) = false];
  ;
}